--- a/static/scss/_selects.scss
+++ b/static/scss/_selects.scss
@@ -83,7 +83,7 @@ select.select2-complex {
   background-image: url(../images/ico/date.png);
 }
 
-.form_group .select2-container {
+.form .select2-container {
   width: 100%!important;
 
   .select2-choice {
