--- a/templates/includes/_favorite.html
+++ b/templates/includes/_favorite.html
@@ -1,10 +1,10 @@
 <div class="tab-box_top p20">
     <h2 class="mb20">Избранные товары</h2>
-    <p class="favorite_lead">Создавайте списки товаров для разных целей: список для постоянных покупок, <br/>список для возможных покупок, список интересных товаров. <br/>Если у вас появятся вопросы по работе со списками, посмотрите раздел <a href="#" class="blue">Вопросы про избранное</a>.</p>
+    <p class="tabs_lead">Создавайте списки товаров для разных целей: список для постоянных покупок, <br/>список для возможных покупок, список интересных товаров. <br/>Если у вас появятся вопросы по работе со списками, посмотрите раздел <a href="#" class="blue">Вопросы про избранное</a>.</p>
 </div>
 <div class="sh mb40">
     <div class="float-cont p20">
-        <h2 class="v1 v2">Найти в избранном</h2>
+        <h2 class="v1">Найти в избранном</h2>
         <form class="search-block full">
             <input type="text" class="search-input dark" placeholder="Найти в избранном" />
             <input type="submit" class="search-sub" value=""/>
