--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -83,7 +83,7 @@
                 <span class="chart_desc chart_desc_wide">Если у вас есть промо-код или купон
                     <span class="tip-wrap tip-init">
                         (?)
-                        <div class="tip tip_atop tip_atop_r">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
+                        <div class="tip tip_atop tip_atop_b">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
                     </span>
                     , укажите его здесь:</span><!--
                 --><span class="chart_input"><input type="text" class="text-box s-change" data-change="promo" /></span><!--
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form_group_wide">
+            <div class="form_group_full">
                 <div class="form_inline form_group">
                     <label for="street2" class="form_label">Улица:</label>
                     <input type="text" id="street2" class="form_text" />
@@ -162,7 +162,7 @@
     <div>
         <p class="semibold mb15">Изменить дату и время доставки:</p>
         <form action="#" method="post">
-            <div class="form_group_wide">
+            <div class="form_group_full">
                 <div class="form_inline form_group">
                     <label class="form_label">Дата:</label>
                     <div class="date-select">
@@ -174,7 +174,7 @@
                         </select>
                     </div>
                 </div>
-                <label for="soon"><input type="checkbox" id="soon" class="form_checkbox" /> Как можно раньше</label>
+                <label for="soon" class="form_checkbox"><input type="checkbox" id="soon"/><i></i>Как можно раньше</label>
             </div>
             <div class="form_group">
                 <label class="form_label">Время:</label>
