--- a/templates/office.html
+++ b/templates/office.html
@@ -38,6 +38,9 @@
 		<div class="tab-box">
 			//= includes/_favorite.html
 		</div>
+		<div class="tab-box">
+			//= includes/_mail.html
+		</div>
 	</div>
 </div>
 
