--- a/static/scss/_tabs.scss
+++ b/static/scss/_tabs.scss
@@ -64,7 +64,10 @@ ul.tabs_wide {
 .tabs_img {
   margin-bottom: 4px;
 }
-
+.tabs_lead {
+  font-size: 16px;
+  line-height: 21px;
+}
 .tab-box {
   display: none;
   position: relative;
