--- a/templates/includes/_accaunt.html
+++ b/templates/includes/_accaunt.html
@@ -11,13 +11,13 @@
             <input type="text" id="name" class="form_text" value="Владимир" />
         </div>
         <div class="form_group tip-wrap tip-init">
-            <label for="phone" class="form_label">Мобильный телефон:</label>
-            <input type="text" id="phone" class="form_text" />
+            <label for="phone1" class="form_label">Мобильный телефон:</label>
+            <input type="text" id="phone1" class="form_text" />
             <div class="tip tip_inside">Телефон нужен: для подтверждения заказа оператором, для восстановления пароля и для информации о статусе заказа по SMS. Используйте телефон для входа как логин.</div>
         </div>
         <div class="form_group tip-wrap tip-init">
-            <label for="email" class="form_label">E-mail:</label>
-            <input type="text" id="email" class="form_text" />
+            <label for="email1" class="form_label">E-mail:</label>
+            <input type="text" id="email1" class="form_text" />
             <div class="tip tip_inside">E-mail нужен: как логин для входа в аккаунт, для восстановления пароля и для отправления информации о статусе заказа.</div>
         </div>
         <div class="form_group" data-hide="changePassword">
@@ -39,7 +39,7 @@
     </form>
 </div>
 <div class="sh p20" data-scrollTo="addAddress">
-    <h2 class="v1 v2">Адрес для доставки</h2>
+    <h2 class="v1">Адрес для доставки</h2>
     <div class="form_group mb0  tip-wrap tip-init" data-hide="addAddress">
         <button class="btn btn_block s-toggle" data-toggle="addAddress">Добавить адрес</button>
         <div class="tip tip_inside">Заполните 1 раз адрес доставки, и он будет автоматически подставляться при оформлении новых заказов, а также учитываться при доставке. Это удобно!</div>
@@ -63,7 +63,7 @@
             <label for="station1" class="form_label">Ближайшее метро:</label>
             <input type="text" id="station1" class="form_text" />
         </div>
-        <div class="form_group_wide">
+        <div class="form_group_full">
             <div class="form_inline form_group">
                 <label for="street1" class="form_label">Улица:</label>
                 <input type="text" id="street1" class="form_text" />
@@ -81,7 +81,7 @@
                 <input type="text" id="office1" class="form_text" />
             </div>
         </div>
-        <div class="form_group form_group_wide">
+        <div class="form_group form_group_full">
             <div class="form_inline form_group_thin">
                 <label for="access1" class="form_label">Подъезд:</label>
                 <input type="text" id="access1" class="form_text" />
@@ -101,7 +101,7 @@
     </form>
 </div>
 <div class="sh p20 mb40" data-scrollTo="addPet">
-    <h2 class="v1 v2">Мои питомцы</h2>
+    <h2 class="v1">Мои питомцы</h2>
     <div class="pets" data-hide="addPet">
         <div class="pets_item">
             <img src="static/images/upload/pet.jpg" class="pets_image" alt="" />
@@ -128,7 +128,7 @@
             <button class="btn btn_block s-toggle" data-toggle="addPet">Добавить питомца</button>
         </div>
     </div>
-    <form action="#" method="post" class="hidden s-change" data-change="addPet" data-show="addPet">
+    <form action="#" method="post" class="form hidden s-change" data-change="addPet" data-show="addPet">
         <div class="form_group tip-wrap tip-init">
             <label class="form_label">Вид вашего питомца:</label>
             <select class="select2">
