--- a/templates/office.html
+++ b/templates/office.html
@@ -41,6 +41,9 @@
 		<div class="tab-box">
 			//= includes/_mail.html
 		</div>
+		<div class="tab-box">
+			//= includes/_bonuses.html
+		</div>
 	</div>
 </div>
 
