--- a/templates/includes/_mail.html
+++ b/templates/includes/_mail.html
@@ -27,7 +27,7 @@
                     <option>Не всех</option>
                 </select>
             </div>
-            <div class="form_inline form_group_middle">
+            <div class="form_inline form_group_xx-medium">
                 <select class="select2">
                     <option>Каждый день</option>
                     <option selected>1 раз в неделю</option>
@@ -47,7 +47,7 @@
                     <option>Не всех</option>
                 </select>
             </div>
-            <div class="form_inline form_group_middle">
+            <div class="form_inline form_group_xx-medium">
                 <select class="select2">
                     <option selected>Каждый день</option>
                     <option>1 раз в неделю</option>
