--- a/static/scss/_content.scss
+++ b/static/scss/_content.scss
@@ -9,6 +9,15 @@ body {
 .sidebar {
   width: 220px;
 }
+.sidebar_wide {
+  width: 300px;
+}
+.sidebar_medium {
+  width: 240px;
+}
 .content {
   width: 700px;
+}
+.content_thin {
+  width: 360px;
 }
