--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -28,6 +28,9 @@
 .mr0 {
   margin-right: 0 !important;
 }
+.mr20 {
+  margin-right: 20px;
+}
 .mb0 {
   margin-bottom: 0 !important;
 }
@@ -99,6 +102,9 @@ h4.fs13, .fs13 {
   font-size: 11px;
   color: $color-text-grey;
   line-height: 1.1em;
+}
+.fs21 {
+  font-size: 21px;
 }
 
 .def-color {
