--- a/static/scss/_orders.scss
+++ b/static/scss/_orders.scss
@@ -41,11 +41,25 @@
   width: 150px;
 }
 .orders_img {
+   float: left;
+   width: 40px;
+   margin-right: 10px;
+   text-align: center;
+
+   img {
+     max-width: 40px;
+     max-height: 40px;
+   }
+ }
+.orders_img_large {
   float: left;
-  margin-right: 10px;
+  width: 60px;
+  margin-right: 20px;
+  text-align: center;
 
   img {
-    max-height: 40px;
+    max-width: 60px;
+    max-height: 70px;
   }
 }
 .orders_link {
@@ -88,4 +102,18 @@
   &.repeat {
     background: url(../images/ico/orange-repeat.png) 0 0 no-repeat;
   }
+}
+
+.ordering_table,
+.ordering_info {
+  display: inline-block;
+  vertical-align: top;
+}
+.ordering_table {
+  width: 600px;
+}
+.ordering_info {
+  width: 260px;
+  padding: 15px 20px 0;
+  line-height: 21px;
 }
