--- a/static/scss/_orders.scss
+++ b/static/scss/_orders.scss
@@ -104,6 +104,10 @@
   }
 }
 
+.ordering_contacts {
+  line-height: 21px;
+  margin-bottom: 25px;
+}
 .ordering_table,
 .ordering_info {
   display: inline-block;
