--- a/templates/ordering.html
+++ b/templates/ordering.html
@@ -5,8 +5,8 @@
     <div class="float-cont">
         <div class="sidebar_medium fleft mr20">
             <div class="sh p20">
-                <h2 class="mb25">Контакты</h2>
-                <p class="mb25">У вас есть аккаунт? <a href="#" class="blue">Войти</a></p>
+                <h2 class="mb20">Контакты</h2>
+                <div class="ordering_contacts">У вас есть аккаунт? <a href="#" class="blue">Войти</a></div>
                 <div class="form_group">
                     <label for="phone" class="form_label">
                         Мобильный телефон:
@@ -52,24 +52,20 @@
                     <label for="delivery-self" class="form_radio">
                         <input type="radio" name="delivery-type" id="delivery-self"/>
                         <i></i>
-                        <span class="title">Самовывоз</span>
-                        <span class="desc">
-                            <p>Бесплатно, можно забрать — послезавтра.</p>
-                            <p>Москва, метро Курская</p>
-                            <a href="#" class="blue">Схема проезда</a>
-                        </span>
+                        <p class="semibold">Самовывоз</p>
+                        <p>Бесплатно, можно забрать — послезавтра.</p>
+                        <p>Москва, метро Курская</p>
+                        <a href="#" class="blue">Схема проезда</a>
                     </label>
                 </div>
                 <div class="form_substrate current corner">
                     <label for="delivery-man" class="form_radio">
                         <input type="radio" name="delivery-type" id="delivery-man" checked/>
                         <i></i>
-                        <span class="title">Курьером</span>
-                        <span class="desc">
-                            <p>Бесплатно (при заказе от 999 руб).</p>
-                            <p>В течение 1-3 дней</p>
-                            <a href="#" class="blue">Условия доставки</a>
-                        </span>
+                        <p class="semibold">Курьером</p>
+                        <p>Бесплатно (при заказе от 999 руб).</p>
+                        <p>В течение 1-3 дней</p>
+                        <a href="#" class="blue">Условия доставки</a>
                     </label>
                 </div>
                 <p class="semibold mb15">Адрес доставки:</p>
@@ -125,15 +121,15 @@
                     <label for="payment-cash1" class="form_radio">
                         <input type="radio" name="payment" id="payment-cash1"/>
                         <i></i>
-                        <span class="title">При получении товара</span>
-                        <span class="desc">наличными курьеру</span>
+                        <p class="semibold">При получении товара</p>
+                        <p>наличными курьеру</p>
                     </label>
                 </div>
                 <div class="form_substrate current">
                     <label for="payment-card" class="form_radio">
                         <input type="radio" name="payment" id="payment-card" checked/>
                         <i></i>
-                        <span class="title">Онлайн-оплата картой</span>
+                        <p class="semibold">Онлайн-оплата картой</p>
                         <img src="static/images/ico/cards.png" alt="" />
                     </label>
                 </div>
@@ -141,15 +137,15 @@
                     <label for="payment-cash2" class="form_radio">
                         <input type="radio" name="payment" id="payment-cash2"/>
                         <i></i>
-                        <span class="title">При получении товара</span>
-                        <span class="desc">наличными курьеру</span>
+                        <p class="semibold">При получении товара</p>
+                        <p>наличными курьеру</p>
                     </label>
                 </div>
             </div>
         </div>
     </div>
     <div class="sh p20">
-        <h2 class="mb5">Заказ</h2>
+        <h2 class="v3">Заказ</h2>
         <div class="ordering_table">
             <div class="row p20">
                 <div class="orders_img_large">
@@ -176,7 +172,7 @@
                 <p><span class="sm-grey">Стоимость с учетом всех скидок:</span> <span class="semibold">560 руб</span></p>
                 <p><span class="sm-grey">Стоимость доставки:</span> <span class="semibold">0 руб</span></p>
             </div>
-            <div class="helveticabold fs21 mb25">Итого 1 560 руб</div>
+            <div class="helveticabold fs21 mb36">Итого 1 560 руб</div>
             <div class="form_inline form_group_x-medium">
                 <a href="#" class="btn btn_block">Подтвердить заказ</a>
             </div>
