Оформление заказа успех

--- a/templates/includes/_bonuses.html
+++ b/templates/includes/_bonuses.html
@@ -1,7 +1,7 @@
 <div class="tab-box_top p20">
     <h2 class="mb20">Бонусы</h2>
     <div class="row">
-        <p class="tabs_lead mb40">Бонусы — это преимущество только зарегистрированных пользователей, наших постоянных покупателей! Бонусы даются за каждую покупку и составляют от 5 до 8% от стоимости заказа.</p>
+        <p class="sh_lead mb40">Бонусы — это преимущество только зарегистрированных пользователей, наших постоянных покупателей! Бонусы даются за каждую покупку и составляют от 5 до 8% от стоимости заказа.</p>
     </div>
     <div class="bonuses_cols-3">
         <div class="bonuses_col-3">Бонусы легко считать! <span class="bonuses_bold">1 бонус = 1 рубль</span></div><!--
