--- a/templates/includes/_mail.html
+++ b/templates/includes/_mail.html
@@ -1,6 +1,6 @@
 <div class="tab-box_top p20">
     <h2 class="mb20">Мои рассылки и уведомления</h2>
-    <p class="tabs_lead mb25">Здесь вы можете настроить рассылку писем на e-mail на интересующие вас темы. <br/>Если у вас появятся вопросы по работе с рассылкой, посмотрите раздел <a href="#" class="blue">Вопросы по рассылке</a>.</p>
+    <p class="sh_lead mb25">Здесь вы можете настроить рассылку писем на e-mail на интересующие вас темы. <br/>Если у вас появятся вопросы по работе с рассылкой, посмотрите раздел <a href="#" class="blue">Вопросы по рассылке</a>.</p>
     <form action="#" method="post">
         <div class="form_group">
             <label for="email2" class="form_label">Введите название списка:</label>
