--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -161,7 +161,7 @@
     </div>
     <div>
         <p class="semibold mb15">Изменить дату и время доставки:</p>
-        <form action="#" method="post">
+        <form action="#" method="post" class="form">
             <div class="form_group_full">
                 <div class="form_inline form_group">
                     <label class="form_label">Дата:</label>
