--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -149,8 +149,8 @@
         </div>
     </div>
     <h2 class="h1 v1">Не забудьте купить:</h2>
-    <div class="catalog sh show-category mb40">
-        <div class="p20 float-cont">
+    <div class="sh p20 mb40">
+        <div class="catalog show-category float-cont">
             <div class="line">
                 //= includes/_catalog-item.html
                 <div class="catalog-sep"></div>
