--- a/static/scss/_boxes.scss
+++ b/static/scss/_boxes.scss
@@ -84,7 +84,10 @@ img.adv {
 .sh-panel_bottom{
   border-radius: 0 0 5px 5px;
 }
-
+.sh_lead {
+  font-size: 16px;
+  line-height: 21px;
+}
 .sh.def-color {
   line-height: 1.5em;
 }
