--- a/static/scss/_orders.scss
+++ b/static/scss/_orders.scss
@@ -104,7 +104,7 @@
   }
 }
 
-.ordering_contacts {
+.ordering_text {
   line-height: 21px;
   margin-bottom: 25px;
 }
@@ -114,10 +114,21 @@
   vertical-align: top;
 }
 .ordering_table {
-  width: 600px;
+  width: 610px;
 }
 .ordering_info {
-  width: 260px;
-  padding: 15px 20px 0;
+  width: 270px;
+  padding: 15px 0 0 20px;
   line-height: 21px;
+}
+.ordering_edit {
+  display: inline-block;
+  vertical-align: text-bottom;
+  width: 50px;
+  margin-left: 10px;
+  font-size: 11px;
+  line-height: 11px;
+}
+.ordering_detail {
+  line-height: 26px;
 }
