--- a/templates/includes/_favorite.html
+++ b/templates/includes/_favorite.html
@@ -1,6 +1,6 @@
 <div class="tab-box_top p20">
     <h2 class="mb20">Избранные товары</h2>
-    <p class="tabs_lead">Создавайте списки товаров для разных целей: список для постоянных покупок, <br/>список для возможных покупок, список интересных товаров. <br/>Если у вас появятся вопросы по работе со списками, посмотрите раздел <a href="#" class="blue">Вопросы про избранное</a>.</p>
+    <p class="sh_lead">Создавайте списки товаров для разных целей: список для постоянных покупок, <br/>список для возможных покупок, список интересных товаров. <br/>Если у вас появятся вопросы по работе со списками, посмотрите раздел <a href="#" class="blue">Вопросы про избранное</a>.</p>
 </div>
 <div class="sh mb40">
     <div class="float-cont p20">
