--- a/templates/ordering_login.html
+++ b/templates/ordering_login.html
@@ -6,7 +6,7 @@
         <div class="sidebar_medium fleft mr20">
             <div class="sh p20">
                 <h2 class="mb20">Контакты</h2>
-                <div class="ordering_contacts">
+                <div class="ordering_text">
                     <p class="semibold">Владимир!</p>
                     <p>Ваши контактные данные не изменились?</p>
                 </div>
@@ -172,7 +172,7 @@
                     <p class="semibold">2 шт., 1080 руб</p>
                 </div>
             </div>
-            <div class="row p20">
+            <div class="p20">
                 <div class="orders_img_large">
                     <a href="#"><img src="static/images/upload/c2.jpg" alt="" /></a>
                 </div>
@@ -189,12 +189,11 @@
                 <p><span class="sm-grey">Стоимость доставки:</span> <span class="semibold">0 руб</span></p>
             </div>
             <div class="helveticabold fs21 mb36">Итого 1 560 руб</div>
-            <div class="form_inline form_group_x-medium">
+            <div class="form_inline form_group_medium">
                 <a href="#" class="btn btn_block">Подтвердить заказ</a>
             </div>
-            <a href="#">Изменить заказ</a>
+            <a href="#" class="ordering_edit">Изменить заказ</a>
         </div>
-
     </div>
 </div>
 
