--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -77,9 +77,9 @@
 	<div class="tabs-cont">
 		<div class="float-cont">
 			<ul class="tabs fleft">
-				<li class="first selected">Новинки<span class="sh-fix"></span></li>
+				<li class="selected">Новинки<span class="sh-fix"></span></li>
 				<li>Топ-20<span class="sh-fix"></span></li>
-				<li class="last">Распродажа<span class="sh-fix"></span></li>
+				<li>Распродажа<span class="sh-fix"></span></li>
 			</ul>
 		</div>
 		<div class="tab-box tab-box_top selected float-cont">
@@ -386,25 +386,25 @@
 	<div class="float-cont">
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="static/images/upload/adv1.png" alt="" class="adv"/>
+				<img src="static/images/ico/adv1.png" alt="" class="adv"/>
 				<div class="adv-txt">Бесплатная<br/>доставка по<br/>Москве от 999 руб!</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="static/images/upload/adv2.png" alt="" class="adv"/>
+				<img src="static/images/ico/adv2.png" alt="" class="adv"/>
 				<div class="adv-txt">Система бонусов<br/>и скидок!</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box">
 			<div class="box-inner">
-				<img src="static/images/upload/adv3.png" alt="" class="adv"/>
+				<img src="static/images/ico/adv3.png" alt="" class="adv"/>
 				<div class="adv-txt">Бесплатный<br/>возврат</div>
 			</div>
 		</div>
 		<div class="sh-box adv-box fright">
 			<div class="box-inner">
-				<img src="static/images/upload/adv4.png" alt="" class="adv"/>
+				<img src="static/images/ico/adv4.png" alt="" class="adv"/>
 				<div class="adv-txt">Удобный поиск<br/>по породам</div>
 			</div>
 		</div>
