--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -6,6 +6,7 @@ $color-brown: #886622;
 $color-grey: #d9d9d9;
 $color-grey-light: #eceaea;
 
+$color-bg-orange: #ffe2a7;
 $color-bg-blue: #c9f3ff;
 $color-bg-grey: #f7f7f7;
 
