--- a/templates/index.html
+++ b/templates/index.html
@@ -171,9 +171,9 @@
 	<div class="tabs-cont">
 		<div class="float-cont">
 			<ul class="tabs fleft">
-				<li class="first selected">Новинки<span class="sh-fix"></span></li>
+				<li class="selected">Новинки<span class="sh-fix"></span></li>
 				<li>Топ-20<span class="sh-fix"></span></li>
-				<li class="last">Распродажа<span class="sh-fix"></span></li>
+				<li>Распродажа<span class="sh-fix"></span></li>
 			</ul>
 		</div>
 		<div class="tab-box tab-box_top selected float-cont">
