--- a/templates/office.html
+++ b/templates/office.html
@@ -4,26 +4,29 @@
 	<h1 class="v1">Личный кабинет</h1>
 	<div class="tabs-cont">
 		<div class="float-cont">
-			<ul class="tabs tabs_wide">
-				<li class="first selected">
-					<img src="static/images/ico/acc1.png" class="tabs_img" alt="" />
+			<ul class="tabs tabs_col5">
+				<li class="selected">
+					<img src="static/images/ico/tab-office1.png" class="tabs_img" alt="" />
 					<p>Мой аккаунт</p>
-					<span class="sh-fix"></span></li>
+					<span class="sh-fix"></span>
+				</li>
 				<li>
-					<img src="static/images/ico/acc2.png" class="tabs_img" alt="" />
+					<img src="static/images/ico/tab-office2.png" class="tabs_img" alt="" />
 					<p>Мои заказы</p>
-					<span class="sh-fix"></span></li>
+					<span class="sh-fix"></span>
+				</li>
 				<li>
-					<img src="static/images/ico/acc3.png" class="tabs_img" alt="" />
+					<img src="static/images/ico/tab-office3.png" class="tabs_img" alt="" />
 					<p>Избранное</p>
-					<span class="sh-fix"></span></li>
+					<span class="sh-fix"></span>
+				</li>
 				<li>
-					<img src="static/images/ico/acc4.png" class="tabs_img" alt="" />
+					<img src="static/images/ico/tab-office4.png" class="tabs_img" alt="" />
 					<p>Рассылки</p>
 					<span class="sh-fix"></span>
 				</li>
-				<li class="last">
-					<img src="static/images/ico/acc5.png" class="tabs_img" alt="" />
+				<li>
+					<img src="static/images/ico/tab-office5.png" class="tabs_img" alt="" />
 					<p>Бонусы, промо&#8209;коды</p>
 					<span class="sh-fix"></span>
 				</li>
