--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -141,14 +141,14 @@
 					<div class="main-catalog-item-name"><a href="filter.html">Миски</a></div>
 				</div>
 			</div>
-			<div class="tabs-cont">
-				<div class="float-cont">
-					<ul class="tabs fleft">
-						<li class="selected">Новинки<span class="sh-fix"></span></li>
-						<li>Топ-20<span class="sh-fix"></span></li>
-						<li>Распродажа<span class="sh-fix"></span></li>
-					</ul>
-				</div>
+			<div class="float-cont">
+				<ul class="tabs fleft s-tabs" data-tabs="catalog">
+					<li class="selected">Новинки<span class="sh-fix"></span></li>
+					<li>Топ-20<span class="sh-fix"></span></li>
+					<li>Распродажа<span class="sh-fix"></span></li>
+				</ul>
+			</div>
+			<div class="s-tabs-boxes" data-tabs="catalog">
 				<div class="tab-box tab-box_top selected float-cont">
 					<div class="catalog-item">
 						<div class="quick-view-btn">
