--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -7,7 +7,7 @@
                 <ul>
                     <li>
                         <div class="filter-simple_title current">Доставка</div>
-                        <ul>
+                        <ul class="s-tabs-related" data-tabs="delivery">
                             <li class="filter-simple_option">Москва</li>
                             <li class="filter-simple_option">Московская область</li>
                             <li class="filter-simple_option">Россия</li>
@@ -26,26 +26,26 @@
         </div>
         <div class="content fright">
             <h1>Доставка</h1>
-            <div class="tabs-cont">
-                <div class="float-cont">
-                    <ul class="tabs tabs_col3">
-                        <li class="selected">
-                            <img src="static/images/ico/tab-delivery1.png" class="tabs_img" alt="" />
-                            <p>Москва</p>
-                            <span class="sh-fix"></span>
-                        </li>
-                        <li>
-                            <img src="static/images/ico/tab-delivery2.png" class="tabs_img" alt="" />
-                            <p>Московская область</p>
-                            <span class="sh-fix"></span>
-                        </li>
-                        <li>
-                            <img src="static/images/ico/tab-delivery3.png" class="tabs_img" alt="" />
-                            <p>Россия</p>
-                            <span class="sh-fix"></span>
-                        </li>
-                    </ul>
-                </div>
+            <div class="float-cont">
+                <ul class="tabs tabs_col3 s-tabs" data-tabs="delivery">
+                    <li class="selected">
+                        <img src="static/images/ico/tab-delivery1.png" class="tabs_img" alt="" />
+                        <p>Москва</p>
+                        <span class="sh-fix"></span>
+                    </li>
+                    <li>
+                        <img src="static/images/ico/tab-delivery2.png" class="tabs_img" alt="" />
+                        <p>Московская область</p>
+                        <span class="sh-fix"></span>
+                    </li>
+                    <li>
+                        <img src="static/images/ico/tab-delivery3.png" class="tabs_img" alt="" />
+                        <p>Россия</p>
+                        <span class="sh-fix"></span>
+                    </li>
+                </ul>
+            </div>
+            <div class="s-tabs-boxes" data-tabs="delivery">
                 <div class="tab-box selected">
                     1
                 </div>
