--- a/templates/index.html
+++ b/templates/index.html
@@ -168,14 +168,14 @@
 		</div>
 	</div>
 
-	<div class="tabs-cont">
-		<div class="float-cont">
-			<ul class="tabs fleft">
-				<li class="selected">Новинки<span class="sh-fix"></span></li>
-				<li>Топ-20<span class="sh-fix"></span></li>
-				<li>Распродажа<span class="sh-fix"></span></li>
-			</ul>
-		</div>
+	<div class="float-cont">
+		<ul class="tabs fleft s-tabs" data-tabs="main">
+			<li class="selected">Новинки<span class="sh-fix"></span></li>
+			<li>Топ-20<span class="sh-fix"></span></li>
+			<li>Распродажа<span class="sh-fix"></span></li>
+		</ul>
+	</div>
+	<div class="s-tabs-boxes" data-tabs="main">
 		<div class="tab-box tab-box_top selected float-cont">
 			<div class="catalog-item">
 				<div class="quick-view-btn">
