--- a/templates/index_login.html
+++ b/templates/index_login.html
@@ -74,14 +74,14 @@
 
 	</div>
 
-	<div class="tabs-cont">
-		<div class="float-cont">
-			<ul class="tabs fleft">
-				<li class="selected">Новинки<span class="sh-fix"></span></li>
-				<li>Топ-20<span class="sh-fix"></span></li>
-				<li>Распродажа<span class="sh-fix"></span></li>
-			</ul>
-		</div>
+	<div class="float-cont">
+		<ul class="tabs fleft s-tabs" data-tabs="main">
+			<li class="selected">Новинки<span class="sh-fix"></span></li>
+			<li>Топ-20<span class="sh-fix"></span></li>
+			<li>Распродажа<span class="sh-fix"></span></li>
+		</ul>
+	</div>
+	<div class="s-tabs-boxes" data-tabs="main">
 		<div class="tab-box tab-box_top selected float-cont">
 			<div class="catalog-item">
 				<div class="quick-view-btn">
@@ -149,7 +149,7 @@
 							<option>5</option>
 						</select>
 					</div>
-				</div>	
+				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
 				<div class="catalog-item-category">
 					В категории
@@ -187,7 +187,7 @@
 							<option>5</option>
 						</select>
 					</div>
-				</div>	
+				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
 				<div class="catalog-item-category">
 					В категории
@@ -225,14 +225,14 @@
 							<option>5</option>
 						</select>
 					</div>
-				</div>	
+				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
 				<div class="catalog-item-category">
 					В категории
 					<div class="catalog-item-category-link"><a href="">Уход за зубами</a>, <a href="">Лакомство для собак</a></div>
 				</div>
 			</div>
-			
+
 
 		</div>
 		<div class="tab-box tab-box_top">контент2...</div>
