--- a/templates/office.html
+++ b/templates/office.html
@@ -2,36 +2,36 @@
 
 <div class="width">
 	<h1 class="v1">Личный кабинет</h1>
-	<div class="tabs-cont">
-		<div class="float-cont">
-			<ul class="tabs tabs_col5">
-				<li class="selected">
-					<img src="static/images/ico/tab-office1.png" class="tabs_img" alt="" />
-					<p>Мой аккаунт</p>
-					<span class="sh-fix"></span>
-				</li>
-				<li>
-					<img src="static/images/ico/tab-office2.png" class="tabs_img" alt="" />
-					<p>Мои заказы</p>
-					<span class="sh-fix"></span>
-				</li>
-				<li>
-					<img src="static/images/ico/tab-office3.png" class="tabs_img" alt="" />
-					<p>Избранное</p>
-					<span class="sh-fix"></span>
-				</li>
-				<li>
-					<img src="static/images/ico/tab-office4.png" class="tabs_img" alt="" />
-					<p>Рассылки</p>
-					<span class="sh-fix"></span>
-				</li>
-				<li>
-					<img src="static/images/ico/tab-office5.png" class="tabs_img" alt="" />
-					<p>Бонусы, промо&#8209;коды</p>
-					<span class="sh-fix"></span>
-				</li>
-			</ul>
-		</div>
+	<div class="float-cont">
+		<ul class="tabs tabs_col5 s-tabs" data-tabs="office">
+			<li class="selected">
+				<img src="static/images/ico/tab-office1.png" class="tabs_img" alt="" />
+				<p>Мой аккаунт</p>
+				<span class="sh-fix"></span>
+			</li>
+			<li>
+				<img src="static/images/ico/tab-office2.png" class="tabs_img" alt="" />
+				<p>Мои заказы</p>
+				<span class="sh-fix"></span>
+			</li>
+			<li>
+				<img src="static/images/ico/tab-office3.png" class="tabs_img" alt="" />
+				<p>Избранное</p>
+				<span class="sh-fix"></span>
+			</li>
+			<li>
+				<img src="static/images/ico/tab-office4.png" class="tabs_img" alt="" />
+				<p>Рассылки</p>
+				<span class="sh-fix"></span>
+			</li>
+			<li>
+				<img src="static/images/ico/tab-office5.png" class="tabs_img" alt="" />
+				<p>Бонусы, промо&#8209;коды</p>
+				<span class="sh-fix"></span>
+			</li>
+		</ul>
+	</div>
+	<div class="s-tabs-boxes" data-tabs="office">
 		<div class="tab-box selected">
 			//= includes/_accaunt.html
 		</div>
