--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="content fright">
-            <h1>Доставка</h1>
+            <h1 class="mb10">Доставка</h1>
             <div class="float-cont">
                 <ul class="tabs tabs_col3 s-tabs" data-tabs="delivery">
                     <li class="selected">
@@ -47,7 +47,7 @@
             </div>
             <div class="s-tabs-boxes" data-tabs="delivery">
                 <div class="tab-box selected">
-                    1
+                    //= includes/_moscow.html
                 </div>
                 <div class="tab-box">
                     2
