header - add fancybox launch footer - footer links text changes

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -28,26 +28,27 @@
         </div>
         <div class="f-menu">
             <div class="h4 black">Покупателям</div>
-            <ul>
-                <li><a href="">Доставка</a></li>
-                <li><a href="">Способы оплаты</a></li>
-                <li><a href="">Покупателям</a></li>
-                <li><a href="">Возврат товара</a></li>
-                <li><a href="">Вопросы и ответы</a></li>
-                <li><a href="">Узнать статус заказа</a></li>
-                <li><a href="">Письмо директору</a></li>
-            </ul>
+			<ul>
+				<li><a href="">Доставка</a></li>
+				<li><a href="">Оплата</a></li>
+				<li><a href="">Возврат/Обмен</a></li>
+				<li><a href="">Письмо директору</a></li>
+				<li><a href="">Вопрос-Ответ</a></li>
+				<li><a href="#layer-status" class="fancybox">Узнать статус заказа</a></li>
+				<li><a href="">Безопасность</a></li>
+			</ul>
         </div>
         <div class="f-menu">
             <div class="h4 black">ТинниВинни</div>
-            <ul>
-                <li><a href="">О нас</a></li>
-                <li><a href="">Контакты</a></li>
-                <li><a href="">Партнерам</a></li>
-                <li><a href="">Правовая информация</a></li>
-                <li><a href="">Работа у нас</a></li>
-                <li><a href="">Карта сайта</a></li>
-            </ul>
+			<ul>
+				<li><a href="">О нас</a></li>
+				<li><a href="">Контакты</a></li>
+				<li><a href="">Партнерам</a></li>
+				<li><a href="">Гарантии</a></li>
+				<li><a href="">Карта сайта</a></li>
+				<li><a href="">Работа у нас</a></li>
+				<li><a href="">Нам не все равно</a></li>
+			</ul>
         </div>
         <div class="f-catalog">
             <div class="h4 black">Каталог</div>
@@ -124,7 +125,7 @@
 		<div class="layer-note">Укажите телефон, на который<br/>нужно перезвонить.</div>
 		<form>
 			<div class="label"><label for="f1">Телефон*:</label></div>
-			<input type="tel" class="def-input" placeholder="Например, +7(912) 111-11-11" id="f1"/>
+			<input type="tel" class="def-input phone-mask" placeholder="+7" id="f1"/>
 			<div class="label"><label for="f2">Имя*:</label></div>
 			<input type="text" class="def-input" placeholder="" id="f2"/>
 			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Заказать звонок"/></div>
