--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -77,7 +77,7 @@
             </ul>
             <div class="contact-block">
                 <div class="ph">+7(495)111-11-11</div>
-                <a href="" class="underline">Заказать обратный звонок</a>
+                <a href="#layer-call" class="fancybox underline">Заказать обратный звонок</a>
             </div>
         </div>
     </div>
