card styles, update script.js and others

--- a/templates/card_cloth.html
+++ b/templates/card_cloth.html
@@ -35,7 +35,25 @@
 						
 							<div class="card-price-old">640 Р</div>
 						</div>
-						<div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов.</div>
+						<div class="sizes-cont">
+							<div class="sizes-note">Размер:</div>
+							<div class="sizes">
+								<div class="size-item selected">10</div>
+								<div class="size-item">12</div>
+								<div class="size-item">14</div>
+								<div class="size-item">XS</div>
+							</div>
+							<a href="#layer-size" class="fancybox blue sizes-link">Таблица<br/>размеров</a>
+						</div>
+						<div class="mb20">
+							<div class="sizes-note">Цвет:</div>
+							<div class="colors">
+								<div class="color-item selected" style="background-color: #33c7ed;"></div>
+								<div class="color-item" style="background-color: #ff2d2d;"></div>
+								<div class="color-item" style="background-color: #fff;"></div>
+								<div class="color-item" style="background-color: #a0a0a0;"></div>
+							</div>
+						</div>
 						<div class="card-count">
 							Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
 						</div>
