--- a/templates/card_complex.html
+++ b/templates/card_complex.html
@@ -18,7 +18,7 @@
 					<div class="card-desc">
 						<h1>Royal Canin Maxi Junior Канин для молодых собак крупных пород 4 кг</h1>
 						<div class="card-code">Код товара: 12778</div>
-						<input type="hidden" class="prod-price-actual" value="540"/>
+						<input type="hidden" class="prod-price-actual" value="520"/>
 						<div class="card-rate-cont">
 							<div class="card-rate">
 								<div class="card-rate-item"></div>
@@ -29,18 +29,35 @@
 							</div>
 							<div class="rate-txt">18 голосов, 3 отзыва</div>
 						</div>
-						<div class="card-price-cont">
-							<div class="card-price">540 Р</div>
-							<div class="marker-avaliable">В наличии</div>
-						
-							<div class="card-price-old">640 Р</div>
+						<div class="import card-complex-note">Выберите упаковку:</div>
+						<div class="card-complex-cont">
+							<div class="card-complex-item selected">
+								<div class="card-complex-bg">
+									<div class="card-complex-value">800 г</div>
+									<div class="card-complex-price">520 Р</div>
+								</div>
+								<div class="marker-avaliable">В наличии</div>
+							</div>
+							<div class="card-complex-item">
+								<div class="card-complex-bg">
+									<div class="card-complex-value">3,5 кг</div>
+									<div class="card-complex-price">2540 Р</div>
+								</div>
+								<div class="marker-avaliable">В наличии</div>
+							</div>
+							<div class="card-complex-item no-aval">
+								<div class="card-complex-bg">
+									<div class="card-complex-value">5 кг</div>
+									<div class="card-complex-price">3600 Р</div>
+								</div>
+								<div class="marker-no-avaliable">Нет<br/>в наличии</div>
+							</div>
 						</div>
-						<div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов.</div>
 						<div class="card-count">
 							Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
 						</div>
 						<div class="card-total">
-							Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(540 х <span class="counter-value">2</span>)</span>
+							Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(520 х <span class="counter-value">2</span>)</span>
 						</div>
 						<div class="mb36">
 							<a href="" class="btn btn-buy">В корзину</a>
