--- a/templates/card_not_avaliable.html
+++ b/templates/card_not_avaliable.html
@@ -31,20 +31,19 @@
 						</div>
 						<div class="card-price-cont">
 							<div class="card-price">540 Р</div>
-							<div class="marker-avaliable">В наличии</div>
-						
-							<div class="card-price-old">640 Р</div>
+							<div class="marker-no-avaliable">Нет в наличии</div>
 						</div>
 						<div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов.</div>
-						<div class="card-count">
-							Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
-						</div>
-						<div class="card-total">
-							Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(540 х <span class="counter-value">2</span>)</span>
-						</div>
 						<div class="mb36">
-							<a href="" class="btn btn-buy">В корзину</a>
-							<a href="#layer-click" class="fancybox semibold">Купить в 1 клик</a>
+							<div class="related-suggest-cont">
+								<a href="#layer-remind" class="btn btn-block fancybox">Сообщить о поступлении</a>
+								<div class="related-suggest">Мы нашли похожие<br/>товары!</div>
+							</div>	
+							<div class="related-date">
+								Планируемая дата 
+								поступления 12.10.2014,
+								<span class="import">через 10 дней</span>
+							</div>
 						</div>
 					</div>
 
@@ -52,7 +51,7 @@
 
 					//= includes/_card_tabs.html
 
-					//= includes/_card_recently.html
+					//= includes/_card_recently_not_avaliable.html
 
 					//= includes/_card_blog.html
 
