--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -62,7 +62,7 @@
 			<div class="content fright">
 				<h1 class="v3">Все для Малой аппенинской гончей</h1>
 
-				<div class="sh catalog subcatalog">
+				<div class="sh catalog subcatalog show-category">
 					<div class="subcatalog-title float-cont">
 						<div class="fleft"><h2>Корма для Малой аппенинской гончей</h2></div>
 						<div class="fright"><a href="filter.htlm">Все корма для Малой аппенинской гончей</a></div>
@@ -185,7 +185,7 @@
 					</div>
 				</div>
 
-				<div class="sh catalog subcatalog">
+				<div class="sh catalog subcatalog show-category">
 					<div class="subcatalog-title float-cont">
 						<div class="fleft"><h2>Здоровье для Малой аппенинской гончей</h2></div>
 						<div class="fright"><a href="filter.htlm">Все товары для здоровья для Малой аппенинской гончей</a></div>
