--- a/templates/filter.html
+++ b/templates/filter.html
@@ -157,7 +157,7 @@
 				<div class="p20 float-cont">
 					<div class="line">
 						<div class="catalog-item">
-							<div class="quick-view-btn">
+							<div class="quick-view-btn fancybox" data-fancybox-href="#layer-quickview1">
 								<span class="qv"></span>Быстрый просмотр
 							</div>
 							<div class="catalog-item-img">
