--- a/templates/index.html
+++ b/templates/index.html
@@ -197,13 +197,7 @@
 					</div>
 					<div class="catalog-item-count">
 						<div class="fs11">Кол-во</div>
-						<select class="select2">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
-						</select>
+						<input type="text" class="qty" value="1" maxlength="3" />
 					</div>
 				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -235,13 +229,7 @@
 					</div>
 					<div class="catalog-item-count">
 						<div class="fs11">Кол-во</div>
-						<select class="select2">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
-						</select>
+						<input type="text" class="qty" value="1" maxlength="3" />
 					</div>
 				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -273,13 +261,7 @@
 					</div>
 					<div class="catalog-item-count">
 						<div class="fs11">Кол-во</div>
-						<select class="select2">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
-						</select>
+						<input type="text" class="qty" value="1" maxlength="3" />
 					</div>
 				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -311,13 +293,7 @@
 					</div>
 					<div class="catalog-item-count">
 						<div class="fs11">Кол-во</div>
-						<select class="select2">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
-						</select>
+						<input type="text" class="qty" value="1" maxlength="3" />
 					</div>
 				</div>
 				<div class="btn-cont"><a href="" class="btn">Купить</a></div>
