--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="static/css/jquery.fancybox.css"/>
     <link rel="stylesheet" href="static/css/jquery.bxslider.css"/>
     <link rel="stylesheet" href="static/css/jquery-ui-1.10.4.custom.css"/>
+    <link rel="stylesheet" href="static/css/rateit.css"/>
 
     <!--[if gte IE 9]>
     <style type="text/css">
