--- a/static/scss/_card.scss
+++ b/static/scss/_card.scss
@@ -68,7 +68,7 @@
 	vertical-align: middle;
 }
 .card-price {
-	font-family: 'open_sansbold';
+	font-family: 'opensansbold';
 	font-size: 34px;
 	line-height: 1em;
 	display: inline-block;
@@ -91,7 +91,7 @@
 .card-price-old {
 	color: #787d82;
 	font-size: 13px;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 	text-decoration: line-through;
 }
 .card-price-cont {
@@ -131,7 +131,7 @@
 }
 .card-total {
 	font-size: 21px;
-	font-family: 'open_sansbold';
+	font-family: 'opensansbold';
 	line-height: 1em;
 	margin-bottom: 16px;
 }
@@ -144,7 +144,7 @@
 	vertical-align: middle;
 }
 .semibold {
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 }
 .card-service-item {
 	display: inline-block;
@@ -245,7 +245,7 @@
 h4.ver2 {
 	text-transform: none;
 	font-size: 14px;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 }
 .tab-box.big-pad {
 	line-height: 1.6em;
@@ -259,7 +259,7 @@ h4.ver2 {
 }
 .import {
 	color: #000;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 }
 table.eq-cols td {
 	width: 47.5%;
@@ -309,7 +309,7 @@ table.eq-cols td.left-td {
 }
 .review-title {
 	font-size: 14px;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 	margin-bottom: 8px;
 }
 .review-author {
@@ -355,7 +355,7 @@ textarea.def {
     border: 1px solid #d9d9d9;
     border-radius: 5px;
     box-sizing: border-box;
-    font-family: "open_sanssemibold";
+    font-family: "opensanssemibold";
     height: 90px;
     margin-bottom: 18px;
     padding: 7px 10px;
@@ -453,7 +453,7 @@ h3.mb16 {
 	margin-bottom: 16px;
 }
 ul.tabs li {
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 }
 .req-marker {
 	color: #eb0000;
@@ -554,7 +554,7 @@ ul.tabs li {
 	margin-top: -3px;
 	text-decoration: underline;
 	cursor: pointer;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 	display: block;
 }
 .related-suggest:hover {
@@ -653,7 +653,7 @@ ul.tabs li {
 	margin-bottom: 5px;
 }
 .card-complex-price {
-	font-family: 'open_sansbold';
+	font-family: 'opensansbold';
 	font-size: 21px;
 	line-height: 1em;
 }
@@ -860,7 +860,7 @@ input.btn {
 	padding: 5px 40px 9px 10px;
 	border-top: 1px solid #d9d9d9;
 	margin-top: -1px;
-	font-family: 'open_sanssemibold';
+	font-family: 'opensanssemibold';
 	cursor: pointer;
 }
 .fav-list-item-count {
